k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fulcrum
  labels:
    name: fulcrum
    app: fulcrum
    environment: production
